--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "pki-frontend",
+  "name": "segurmatica-pki",
   "private": true,
   "version": "1.0.0",
-  "homepage": "https://gfouz.github.io/pki-frontend",
+  "homepage": "https://gfouz.github.io/segurmatica-pki",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
