--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "segurmatica-pki",
   "private": true,
   "version": "1.0.0",
-  "homepage": "https://gfouz.github.io/segurmatica-pki",
+  "homepage": "https://gfouz.github.io/segurmatica-frontend-client",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -27,10 +27,12 @@
     "react-google-recaptcha-v3": "^1.9.8",
     "react-hook-form": "^7.31.3",
     "react-icons": "^4.4.0",
+    "react-popper-tooltip": "^4.4.2",
     "react-query": "^3.39.1",
     "react-router-dom": "^6.3.0",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.0.3",
+    "react-tooltip": "^4.2.21",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.5",
     "zustand": "^4.0.0-rc.1"
