--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "react-slick": "^0.29.0",
     "react-toastify": "^9.0.3",
     "react-tooltip": "^4.2.21",
+    "react-use-error-boundary": "^3.0.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.5",
+    "valtio": "^1.6.3",
     "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
