--- a/package.json
+++ b/package.json
@@ -35,12 +35,15 @@
     "react-popper-tooltip": "^4.4.2",
     "react-query": "^3.39.1",
     "react-router-dom": "^6.3.0",
+    "react-search-autocomplete": "^8.0.0",
     "react-slick": "^0.29.0",
+    "react-textarea-autosize": "^8.3.4",
     "react-toastify": "^9.0.3",
     "react-tooltip": "^4.2.21",
     "react-use-error-boundary": "^3.0.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.5",
+    "turnstone": "^2.2.0",
     "valtio": "^1.6.3",
     "zustand": "^4.0.0-rc.1"
   },
